--- a/portfolio/tsconfig.json
+++ b/portfolio/tsconfig.json
@@ -18,7 +18,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "src",
+    "paths": {
+      "store/*": ["store/*"],
+      "FilmopoiskReact/*": ["FilmopoiskReact/*"],
+      "pages/*": ["pages/*"],
+      "assets/*": ["assets/*"]
+    }
   },
   "include": [
     "src", "typings.d.ts"
