--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
+    "antd": "^5.29.1",
     "axios": "^1.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
